--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -18,7 +18,11 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "element-ui": "^2.10.0",
+    "axios": "^0.19.0",
+    "lodash": "^4.17.14",
+    "moment": "^2.24.0"
   },
   "eslintConfig": {
     "root": true,
