--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -22,6 +22,7 @@
     "element-ui": "^2.10.0",
     "axios": "^0.19.0",
     "lodash": "^4.17.14",
+    "vue-router": "^3.0.7",
     "moment": "^2.24.0"
   },
   "eslintConfig": {
