--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,41 @@
+spring:
+  application:
+    name: quartz-vue-admin
+  jpa:
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties:
+      ## http://docs.jboss.org/hibernate/orm/5.2/userguide/html_single/Hibernate_User_Guide.html#configurations
+      ## lazy loading 허용
+      hibernate.enable_lazy_load_no_trans: true
+
 server:
   port: 8090
+debug: true
+---
+spring:
+  profiles: local
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        web-allow-others: false
+  datasource:
+    url: jdbc:h2:~/test-h2db/scheduler_meta;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: test12
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      ## import.sql 2줄 이상 실행 default : org.hibernate.tool.hbm2ddl.SingleLineSqlCommandExtractor
+      hibernate.hbm2ddl.import_files_sql_extractor: org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
+      ## pretty-print the sql
+      hibernate.format_sql: true
+
 
